@@ -261,6 +261,10 @@
 		</Unit>
 		<Unit filename="common_utilities/EventEncoding.h" />
 		<Unit filename="common_utilities/ParaverColors.h" />
+		<Unit filename="common_utilities/error.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="common_utilities/error.h" />
 		<Unit filename="include/Macros.h" />
 		<Unit filename="include/basic_types.h" />
 		<Unit filename="include/data_types.h" />
